--- a/src/ui/component/cards/CardsPack.module.scss
+++ b/src/ui/component/cards/CardsPack.module.scss
@@ -1,4 +1,3 @@
-
 .wrapper{
     display: flex;
     width: 80%;
@@ -48,11 +47,35 @@ h3{
     display: flex;
     width: 100%;
 }
-.table {
+.table{
     width: 100%;
-/ / height: 48 px;
+//height: 48px;
     margin-top: 24px;
     box-shadow: 1px 1px 10px #ECECF9;
+
+&_title{
+     display: flex;
+     flex-direction: row;
+     justify-content: space-between;
+     font-weight: bold;
+     font-size: 13px;
+     line-height: 16px;
+     color: #2D2E46;
+     align-items: center;
+     background: #ECECF9;
+     width: 100%;
+     height: 48px;
+ }
+&_description{
+     display: flex;
+     flex-direction: row;
+     justify-content: space-between;
+     font-style: normal;
+     font-weight: normal;
+     font-size: 13px;
+     line-height: 16px;
+     color: #000000;
+ }
 }
 .card_button{
     display: flex;
